--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.0.1",
@@ -29,6 +30,7 @@
     "react-native-swiper": "^1.6.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
