--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
     "axios": "^0.21.1",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-native": "0.64.2",
