--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.64.2",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.0",
