--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/slider": "^3.0.3",
+    "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
