--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
