--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
+     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
