--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
     "@react-navigation/bottom-tabs": "^6.0.1",
@@ -23,6 +24,7 @@
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-calendars": "^1.1266.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
