--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1266.0",
