--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-razorpay": "^2.2.7",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-swiper": "^1.6.0",
