--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,7 +191,8 @@ dependencies {
 
      implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
-
+    implementation project(':react-native-razorpay')
+    
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
