--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/slider": "^3.0.3",
