--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/checkbox": "^0.5.8",
@@ -32,6 +33,7 @@
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-range-slider": "^0.1.2",
     "react-native-razorpay": "^2.2.7",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
@@ -40,6 +42,7 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "rn-range-slider": "^2.1.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
