--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1266.0",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
