--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
@@ -21,6 +22,7 @@
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
