--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,7 +1,7 @@
 name: react-native-android-build-apk
 on:
   push:
-    branches: [ feature/otp-login ]      
+    branches: [ main,feature/otp-login ]      
 jobs:
   install-and-test:
     runs-on: ubuntu-latest
