--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
