--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           npm install
       - name: Change wrapper permissions
-        run: chmod +x ./gradlew
+        run: cd android && chmod +x ./gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
