--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -196,7 +196,7 @@ dependencies {
     implementation project(':react-native-razorpay')
     
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+    implementation project(':lottie-react-native')
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
