--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.64.2",
     "react-native-animated-loader": "^0.0.9",
     "react-native-calendars": "^1.1266.0",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-facebook-login": "^1.6.2",
     "react-native-flash-message": "^0.1.23",
