--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-facebook-login": "^1.6.2",
+    "react-native-fbsdk-next": "^7.3.3",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
