transcation details and filter screen

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=http://queuecentral.com/
-API_URL=http://queuecentral.com/api/
+BASE_URL=https://queuecentral.com/
+API_URL=https://queuecentral.com/api/
